--- a/Committee/FootballFans.csproj
+++ b/Committee/FootballFans.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClubOfFootballFans\FootballFansLib.csproj">
+      <Project>{2e896f5a-2307-492e-a143-7c304476a990}</Project>
+      <Name>FootballFansLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
