--- a/Committee/FootballFans.csproj
+++ b/Committee/FootballFans.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CaptainsOfFootballTeams.cs" />
+    <Compile Include="HeadOfFanClub.cs" />
+    <Compile Include="Committee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
