--- a/FootballFans/FootballFans.csproj
+++ b/FootballFans/FootballFans.csproj
@@ -44,13 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CaptainsOfFootballTeams.cs" />
-    <Compile Include="HeadOfFanClub.cs" />
     <Compile Include="Committee.cs" />
+    <Compile Include="HeadOfFanClub1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FootballFansLib\FootballFansLib.csproj">
