Changed read from file methods due to class DataFromFile

--- a/FootballFans/FootballFans.csproj
+++ b/FootballFans/FootballFans.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CaptainsOfFootballTeams.cs" />
+    <Compile Include="DataFromFile.cs" />
     <Compile Include="Committee.cs" />
     <Compile Include="HeadsOfFanClubs.cs" />
     <Compile Include="Program.cs" />
