Connected database FootballFans

--- a/FootballFans/FootballFans.csproj
+++ b/FootballFans/FootballFans.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataFromDB.cs" />
     <Compile Include="DataFromFile.cs" />
     <Compile Include="Committee.cs" />
     <Compile Include="HeadsOfFanClubs.cs" />
@@ -51,7 +53,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FootballFansLib\FootballFansLib.csproj">
