--- a/FootballFansLib/FootballFansLib.csproj
+++ b/FootballFansLib/FootballFansLib.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Season.cs" />
     <Compile Include="FanClub.cs" />
     <Compile Include="FootballFan.cs" />
     <Compile Include="FootballPlayer.cs" />
@@ -50,7 +51,7 @@
     <Compile Include="Match.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Season.cs" />
+    <Compile Include="Stage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
